<resources>
    <string name="app_name">eatBelgium</string>
    <string name="slogan">Avec eat Belgium, manger mieux, meme a l Helb</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="panier">Panier</string>
    <string name="configuration">Configuration</string>
    <string name="profil">Profil</string>
    <string name="param_tres">Paramètres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commandes">Commandes</string>
    <string name="contact">Contact</string>
    <string name="Plats">Plats</string>
</resources>
