<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_home_drawer_plats"
            android:icon="@drawable/ic_restaurant_plats"
            android:title="@string/Plats" />
        <item
            android:id="@+id/activity_home_drawer_panier"
            android:icon="@drawable/ic_basket_panier"
            android:title="@string/panier" />
    </group>

    <item android:title="@string/configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_home_drawer_orders"
                    android:icon="@drawable/ic_order_commandes"
                    android:title="@string/commandes" />
                <item
                    android:id="@+id/activity_home_drawer_contact"
                    android:icon="@drawable/ic_contact_mail"
                    android:title="@string/contact" />
            </group>
        </menu>
    </item>

</menu> 